# radium-textures-gpu

./: .gitignore  Cargo.toml  README.md
exclusions/: Fallout4_Exclusions.txt  SkyrimSE_Exclusions.txt
src/: exclusions.rs  extraction.rs  game.rs  main.rs  optimization.rs  presets.rs
src/bsa/: mod.rs  parser.rs  types.rs
src/database/: discovery.rs  mod.rs  texture_record.rs
src/dds/: mod.rs  parser.rs
src/gui/: mod.rs  worker.rs
src/mo2/: mod.rs  profile.rs  vfs.rs
src/optimizer/: mod.rs
src/texconv/: mod.rs
tools/cuttlefish/lib/: libcuttlefish.so.2.10
tools/nvtt3/: Makefile  README.TXT  nvbatchcompress  nvddsinfo  nvdecompress  nvimgdiff  nvtt_batch_compress  nvtt_batch_compress.cpp  nvtt_resize_compress  nvtt_resize_compress.cpp
tools/nvtt3/docs/: annotated.html  classes.html  deprecated.html  dir_eabd407dc5ef8d952ac229ac93453c72.html  doxygen_crawl.html  files.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_func.html  functions_func_b.html  functions_func_c.html  functions_func_d.html  functions_func_e.html  functions_func_f.html  functions_func_g.html  functions_func_h.html  functions_func_i.html  functions_func_l.html  functions_func_n.html  functions_func_o.html  functions_func_p.html  functions_func_q.html  functions_func_r.html  functions_func_s.html  functions_func_t.html  functions_func_u.html  functions_func_w.html  functions_func_~.html  functions_g.html  functions_h.html  functions_i.html  functions_l.html  functions_n.html  functions_o.html  functions_p.html  (+52 more)
(+169 files in other folders)
